--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 <div id="main-main-content">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Java BootStrap Thymeleaf knižnica</h1>
+            <h1 class="display-4">Java SpringBoot Thymeleaf knižnica</h1>
             <p class="lead">Aplikácia pre správu virtuálnej knižnice. Ovládanie aplikácie je cez menu, ktoré sa zobrazuje vo vrchnej časti stránky.
                 Aplikácia ukladá informácie do databázy SQL.
             </p>
