--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -27,7 +27,7 @@
 <div id="books-main-content">
     <div class="p-2 bg-dark bg-opacity-50 rounded">
         <div class="table-responsive">
-            <table class="table table-sm table-bordered table-striped table-hover table-dark bg-opacity-50 mb-0">
+            <table class="table table-sm table-bordered table-striped table-hover mb-0">
                 <thead class="text-center">
                 <tr>
                     <th>Názov</th>
