--- a/src/main/resources/templates/layouts/library-layout.html
+++ b/src/main/resources/templates/layouts/library-layout.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="sk" xmlns:th="http://www.thymeleaf.org"
+<html lang="sk" data-bs-theme="dark" xmlns:th="http://www.thymeleaf.org"
       th:fragment="main-fragment (title, resources, header, nav, libraryContent, footer)">
 
 <head>
     <meta charset="UTF-8"/>
     <title th:replace="${title}">Page 1 Title</title>
-    <link href="webjars/bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
-    <!--<link th:href="@{/css/library.css}" rel="stylesheet"/>-->
+    <link href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <th:block th:replace="${resources} ?: ~{}"></th:block>
 </head>
 
@@ -35,8 +34,8 @@
             <p>Footer</p>
         </footer>
     </div>
-    <script src="webjars/jquery/3.6.4/jquery.min.js"></script>
-    <script src="webjars/bootstrap/5.2.3/js/bootstrap.min.js"></script>
 </div>
+<script src="/webjars/jquery/3.6.4/jquery.min.js"></script>
+<script src="/webjars/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
