--- a/src/main/resources/templates/layouts/library-layout.html
+++ b/src/main/resources/templates/layouts/library-layout.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:replace="${title}">Page 1 Title</title>
     <link href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <th:block th:replace="${resources} ?: ~{}"></th:block>
