--- a/src/main/resources/templates/fragments/library-fragments.html
+++ b/src/main/resources/templates/fragments/library-fragments.html
@@ -8,7 +8,9 @@
 <div class="pt-2" th:fragment="library-menu">
     <nav class="navbar navbar-expand-lg bg-dark bg-gradient rounded">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Menu</a>
+            <span class="navbar-brand" href="#">
+                <i class="bi-book" style="font-size: 1.5rem; color: cornflowerblue;"></i>
+            </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
