--- a/src/main/resources/templates/patrons.html
+++ b/src/main/resources/templates/patrons.html
@@ -2,54 +2,52 @@
 <html lang="sk" xmlns:th="http://www.thymeleaf.org"
       th:replace="~{layouts/library-layout :: main-fragment(
                                                 ~{::title},
-                                                ~{:: #authors-static-resources},
-                                                ~{:: #authors-header},
-                                                ~{:: #authors-nav},
-                                                ~{:: #authors-main-content},
-                                                ~{:: #authors-footer}
+                                                ~{:: #patrons-static-resources},
+                                                ~{:: #patrons-header},
+                                                ~{:: #patrons-nav},
+                                                ~{:: #patrons-main-content},
+                                                ~{:: #patrons-footer}
                                                )}">
 <head>
     <meta charset="UTF-8">
-    <title>Zoznam autorov kníh</title>
-    <th:block id="authors-static-resources">
+    <title>Zoznam čitateľov</title>
+    <th:block id="patrons-static-resources">
     </th:block>
 </head>
 
 <body>
-<div id="authors-nav" th:replace="~{/fragments/library-fragments :: library-menu}">
+<div id="patrons-nav" th:replace="~{/fragments/library-fragments :: library-menu}">
     Menu
 </div>
 
-<div id="authors-header">
-    Zoznam autorov kníh
+<div id="patrons-header">
+    Zoznam registrovaných čitateľov
 </div>
 
-<div id="authors-main-content">
+<div id="patrons-main-content">
     <div class="p-2 bg-dark bg-opacity-50 rounded">
         <div class="table-responsive">
             <table class="table table-sm table-bordered table-striped table-hover mb-0">
                 <thead class="text-center">
                 <tr>
-                    <th>Meno autora</th>
-                    <th>Počet kníh v knižnici</th>
+                    <th>Meno</th>
+                    <th>Adresa</th>
                     <th>Úprava záznamu</th>
                 </tr>
                 </thead>
 
                 <tbody>
-                <tr th:each="author : ${authors}">
-                    <td class="text-center"
-                        th:text="${author.name}"></td>
-                    <td class="text-center"
-                        th:text="${author.booksCount}"></td>
+                <tr th:each="patron : ${patrons}">
+                    <td th:text="${patron.name}"></td>
+                    <td th:text="${patron.address}"></td>
                     <td>
                         <div class="d-flex justify-content-evenly">
                             <a class="icon-link link-primary"
-                               th:href="@{/update-author/{id}(id=${author.id})}">
+                               th:href="@{/update-patron/{id}(id=${patron.id})}">
                                 <i class="bi bi-pen" style="font-size: 1rem;"></i>
                             </a>
                             <a class="icon-link link-danger"
-                               th:href="@{/deleteAuthorWithId/{id}(id=${author.id})}">
+                                th:href="@{/deletePatronWithId/{id}(id=${patron.id})}">
                                 <i class="bi bi-trash" style="font-size: 1rem;"></i>
                             </a>
                         </div>
@@ -60,9 +58,9 @@
     </div>
 </div>
 
-<div id="authors-footer" th:replace="~{/fragments/library-fragments :: copyright}">
+<div id="patrons-footer" th:replace="~{/fragments/library-fragments :: copyright}">
     Footer
 </div>
-
 </body>
+
 </html>
