--- a/src/main/resources/templates/fragments/library-fragments.html
+++ b/src/main/resources/templates/fragments/library-fragments.html
@@ -41,6 +41,15 @@
                             <li><a class="dropdown-item" th:href="@{/add-author}">Pridaj autora</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Čitatelia
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" th:href="@{/all-patrons}">Zoznam čitateľov</a></li>
+                            <li><a class="dropdown-item" th:href="@{/add-patron}">Pridaj čitateľa</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
