--- a/src/main/resources/templates/author-form.html
+++ b/src/main/resources/templates/author-form.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="sk" xmlns:th="http://www.thymeleaf.org"
       th:replace="~{layouts/library-layout :: main-fragment(
-                                                ~{::title},
-                                                ~{:: #static-resources-content},
+                                                ~{::title},~{},
                                                 ~{:: #header-content},
-                                                ~{:: #nav-content},
-                                                ~{:: #main-content},
-                                                ~{:: #footer-content}
+                                                ~{:: #main-content}
                                                )}">
 <head>
-    <meta charset="UTF-8">
     <title>Autor</title>
-    <th:block id="static-resources-content">
-    </th:block>
 </head>
 
 <body>
-<div id="nav-content" th:replace="~{/fragments/library-fragments :: library-menu}">
-    Menu
-</div>
-
 <div id="header-content">
     Autor
 </div>
@@ -42,9 +32,6 @@
     </div>
 </div>
 
-<div id="footer-content" th:replace="~{/fragments/library-fragments :: copyright}">
-    Footer
-</div>
 </body>
 
 </html>
