--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="sk" xmlns:th="http://www.thymeleaf.org"
       th:replace="~{layouts/library-layout :: main-fragment(
-                                                ~{::title},
-                                                ~{:: #authors-static-resources},
+                                                ~{::title},~{},
                                                 ~{:: #authors-header},
-                                                ~{:: #authors-nav},
-                                                ~{:: #authors-main-content},
-                                                ~{:: #authors-footer}
+                                                ~{:: #authors-main-content}
                                                )}">
 <head>
-    <meta charset="UTF-8">
     <title>Zoznam autorov kníh</title>
-    <th:block id="authors-static-resources">
-    </th:block>
 </head>
 
 <body>
-<div id="authors-nav" th:replace="~{/fragments/library-fragments :: library-menu}">
-    Menu
-</div>
-
 <div id="authors-header">
     Zoznam autorov kníh
 </div>
@@ -58,10 +48,6 @@
             </table>
         </div>
     </div>
-</div>
-
-<div id="authors-footer" th:replace="~{/fragments/library-fragments :: copyright}">
-    Footer
 </div>
 
 </body>
